applications/life/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: life
  namespace: hyplex
  labels:
    app: life
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: life
